# rust-test

./: .gitignore  Cargo.toml  config.toml
.github/workflows/: build.yml  test.yml
src/: main.rs
src/bot/: bot_config.rs  mod.rs
test_macro/: Cargo.toml
test_macro/src/: lib.rs
