[package]
name = "experiments"
version = "0.1.0"
authors = ["AEnterprise <aenterprise2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight = { version = "0.1.0", git = "https://github.com/twilight-rs/twilight.git" }
twilight-gateway = { version = "0.1.0", git = "https://github.com/twilight-rs/twilight.git" }
twilight-model = { version = "0.1.0", git = "https://github.com/twilight-rs/twilight.git" }
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }